Implement JDK11-compliant defineClass
Signed-off-by: Russell Gold <russell.gold@oracle.com>